--- a/static/responsive.css
+++ b/static/responsive.css
@@ -1,6 +1,5 @@
 /* RESPONSIVE CSS
 -------------------------------------------------- */
-/* Mobile devices */
 
 @media (min-width : 1168px) {
 
@@ -9,16 +8,76 @@
     }
 }
 
-@media (min-width : 992px) {
+/* Gallery card
+-------------------------------------------------- */
+
+
+
+@media (max-width : 1199px) {
 
     .card {
-        width: 160px;
-        height: 160px;
+        width: 166px;
+        margin-bottom: 30px;
     }
-
-
 }
 
+@media (max-width : 992px) {
+
+    .card {
+        width: 149px;
+        height: 128px;
+        margin-right: -10px;
+    }
+}
+
+@media (max-width: 769px) {
+
+    .card {
+        width: 149px;
+        height: 128px;
+        margin-right: -10px;
+    }
+}
+
+@media (max-width : 482px) {
+    .card {
+        width: 200px;
+        height: 133px;
+    }
+}
+
+@media (max-width : 390px) {
+
+    .card {
+        width: 113px;
+        height: 89px;
+        margin-bottom: 10px;
+    }
+}
+
+/* Fixed middle *******************/
+@media (max-width : 390px) {
+
+    .fixed-middle {
+        font-size: 0.7rem;
+    }
+}
+
+@media (max-width: 768px) {
+
+    .large-card {
+        width: 240px;
+        height: 180px;
+    }
+}
+
+@media (max-width: 390px) {
+    .large-card {
+        width: 362px;
+        height: 268px;
+    }
+}
+/* OTHERS *******************/
 
 @media (min-width: 768px) {
      #main_section {
@@ -43,12 +102,6 @@
 }
 
 @media (max-width: 768px) {
-
-    .large-card {
-        width: 240px;
-        height: 180px;
-    }
-
 
     .gallery-btn{
         /* background-color: #49505787; */
@@ -108,40 +161,27 @@
 
 }
 
-@media (max-width : 494px) {
-    #main_section {
-        /* margin-top: 120px; */
-    }
-       .card {
-        width: 99px;
-        height: 99px;
-    }
-}
-
-@media (min-width: 539px) {
+@media (min-width: 425px) {
     .top-bar-mobile { display:none; }
     .top-bar-desktop {/* display: table; */}
 }
 
 @media (max-width: 538px) {
 
-    .fixed-middle {top: 345px;/* height: 131px; */font-size: 0.65rem;}
+    .fixed-middle {top: 314px;height: 90px;}
     .top-bar-desktop { display:none; }
     .main-bg {margin-top: 75px;}
-    .top-bar-mobile { display:inline-block; }
-    .main-logo { height: 23px; }
-    .carousel { height: 270px; }
-    .nav-link { transform: scale(1.3); }
-    #main_section { margin-top: 135px; }
-    #top_bar { height: 75px; }
+    .top-bar-mobile {/* display:inline-block; *//* margin-left: 5px; */position: absolute;top: 5px;}
+    .main-logo {/* height: 23px; */position: relative;top: 3px;}
+    .carousel {height: 240px;}
+    .nav-link {/* transform: scale(1.3); */font-size: small;}
+    #main_section {margin-top: 58px;}
+    #top_bar {height: 90px;}
+    #top_bar_not_logged {height: 55px;}
 }
 
 
 @media (min-width : 482px) {
-    .card {
-        /* width: 130px; */
-        height: 130px;
-    }
 
     .large-card {
         width: 325px;
@@ -167,13 +207,6 @@
     }
     .main-logo {
         height: 18px;
-    }
-}
-
-@media (max-width : 388px) {
-    .card {
-        width: 74px;
-        height: 74px;
     }
 }
 
